--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def fragment_version = "1.2.3"
     implementation "androidx.fragment:fragment:$fragment_version"
     debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
