B3 Task 4 - Design the Log layout as third layout that contains TextView, RecyclerView, and Button.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SoccerMatch">
         <activity
+            android:name=".LogActivity"
+            android:exported="true" />
+        <activity
             android:name=".PlayActivity"
             android:exported="true" />
         <activity
